# auto-claim-mudae-self-bot

./: .gitignore  README.md  bot-settings-example.toml  main.py  pyproject.toml  requirements.txt
mudaebot/: MudaeBot.py  __init__.py  constants.py  patterns.py
mudaebot/channel/: Channel.py  __init__.py
mudaebot/channel/cooldown/: Cooldown.py  __init__.py
mudaebot/channel/kakera/: Kakera.py  KakeraColors.py  __init__.py
mudaebot/channel/rolls/: Rolls.py  __init__.py
mudaebot/channel/rolls/rolling/: Rolling.py  __init__.py
old_bot/: MudaeBot.py  bot-settings-example.toml
src/: Channel.py  Cooldown.py  Kakera.py  Rolling.py  Rolls.py  __init__.py  logging.py  main.py  mudae_bot.py  patterns.py
src/adapters/: channel.py
src/bot/: __init__.py  bot.py  domain.py
src/bot/shared/: domain.py  logic.py
src/bot/states/: __init__.py  domain.py  logic.py
src/bot/tasks/: __init__.py
src/bot/tasks/auto_roll/: domain.py  task.py
src/bot/tasks/claim_daily/: domain.py  task.py
src/bot/tasks/claim_kakera/: domain.py  logic.py  preferences.py  task.py
src/bot/tasks/claim_roll/: domain.py  logic.py  preferences.py  task.py
src/bot/tasks/parse_tu/: logic.py  task.py
src/bot/tasks/shared/: domain.py
src/core/: constants.py  kakera_colors.py  logic.py  models.py  modes.py  parsers.py  rolls.py  utils.py
src/shared/: domain.py  retry.py
src/ui/: __init__.py  input.py  layout.py  logging.py  setup.py  update.py
tests/: note.md
tests/unit/: test_claiming.py  test_logic.py  test_parsers.py  test_rolling.py  test_stock.py
