[project]
name = "MudaeBot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "discord-py-self>=2.1.0",
    "readchar>=4.2.2",
    "rich>=15.0.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
